--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -32,6 +32,7 @@
     "import numpy as np\n",
     "import os.path as osp\n",
     "from glob import glob\n",
+    "from imutils import build_montages\n",
     "from insightface.app import FaceAnalysis\n",
     "from insightface.utils import face_align\n"
    ]
@@ -424,7 +425,38 @@
     "                \n",
     "\n",
     "            ret.append(face_ret)\n",
-    "        return ret\n"
+    "        return ret\n",
+    "    \n",
+    "    def build_mosaic(self, img_path_list, mosaic_shape, border=0.03, save_to = None):\n",
+    "        \"\"\"\n",
+    "        Build a rectangular mosaic of images. Useful for displaying the aligned faces.\n",
+    "        Based on the imutils build_montages function.\n",
+    "        \n",
+    "        Parameters:\n",
+    "            img_path_list: list of paths to image files\n",
+    "            mosaic_shape: tuple of integers, (n_cols, n_rows)\n",
+    "            border: float, percent of image to use as white border\n",
+    "        \n",
+    "        Returns:\n",
+    "            cv2 BGR image with mosaic\n",
+    "        \"\"\"\n",
+    "        assert mosaic_shape is not None\n",
+    "        top = int(border * 112)  # shape[0] = rows\n",
+    "        bottom = top\n",
+    "        left = int(border * 112)  # shape[1] = cols\n",
+    "        right = left\n",
+    "\n",
+    "        imgs = []\n",
+    "        for img_path in img_path_list:\n",
+    "            ret = self.process_image_single_face(img_path)\n",
+    "            if len(ret) > 0:\n",
+    "                img = cv2.cvtColor(ret[\"aligned_face\"], cv2.COLOR_RGB2BGR)\n",
+    "                img = cv2.copyMakeBorder(img,top=top, bottom=bottom,left=left, right=right, borderType=cv2.BORDER_CONSTANT, value=(255,255,255))\n",
+    "                imgs.append(img)\n",
+    "        mosaic = build_montages(imgs, image_shape=(int(112*(1+2*border)),int(112*(1+2*border))), montage_shape=mosaic_shape)[0]\n",
+    "        if save_to is not None:\n",
+    "            cv2.imwrite(save_to,mosaic)\n",
+    "        return mosaic\n"
    ]
   },
   {
@@ -456,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ff.process_image_single_face(\"001_frontal.jpg\")"
+    "ff.process_image_single_face(\"001_frontal.jpg\")\n"
    ]
   },
   {
@@ -800,8 +832,8 @@
     "        if (current_frame % every_n_frames) != 0:\n",
     "            current_frame = current_frame + 1\n",
     "            continue\n",
-    "        \n",
-    "        vs.set(cv2.CAP_PROP_POS_FRAMES, current_frame) \n",
+    "\n",
+    "        vs.set(cv2.CAP_PROP_POS_FRAMES, current_frame)\n",
     "        ret, frame = vs.read()\n",
     "\n",
     "        if not ret:\n",
