added option to aggregate embeddings by the median of each component

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -429,7 +429,7 @@
     "    \n",
     "    def build_mosaic(self, img_path_list, mosaic_shape, border=0.03, save_to = None):\n",
     "        \"\"\"\n",
-    "        Build a rectangular mosaic of images. Useful for displaying the aligned faces.\n",
+    "        Build a rectangular mosaic of the aligned faces.\n",
     "        Based on the imutils build_montages function.\n",
     "        \n",
     "        Parameters:\n",
@@ -617,7 +617,7 @@
    "source": [
     "# | export\n",
     "@patch\n",
-    "def aggregate_embeddings(self: ForensicFace, embeddings, weights=None):\n",
+    "def aggregate_embeddings(self: ForensicFace, embeddings, weights=None, method='mean'):\n",
     "    \"\"\"\n",
     "    Aggregates multiple embeddings into a single embedding.\n",
     "\n",
@@ -626,6 +626,9 @@
     "            aggregated.\n",
     "        weights (numpy.ndarray, optional): A 1D array of shape (num_embeddings,) containing the weights to be assigned\n",
     "            to each embedding. If not provided, all embeddings are equally weighted.\n",
+    "        \n",
+    "        method (str, optional): choice of agregating based on the mean or median of the embeddings. Possible values are\n",
+    "            'mean' and 'median'.\n",
     "\n",
     "    Returns:\n",
     "        numpy.ndarray: A 1D array of shape (embedding_dim,) containing the aggregated embedding.\n",
@@ -633,7 +636,12 @@
     "    if weights is None:\n",
     "        weights = np.ones(embeddings.shape[0], dtype=\"int\")\n",
     "    assert embeddings.shape[0] == weights.shape[0]\n",
-    "    return np.average(embeddings, axis=0, weights=weights)\n"
+    "    assert method in ['mean', 'median']\n",
+    "    if method == 'mean':\n",
+    "        return np.average(embeddings, axis=0, weights=weights)\n",
+    "    else:\n",
+    "        weighted_embeddings = np.array([w*e for w,e in zip(weights,embeddings)])\n",
+    "        return np.median(weighted_embeddings, axis=0)\n"
    ]
   },
   {
@@ -644,12 +652,15 @@
    "source": [
     "# | export\n",
     "@patch\n",
-    "def aggregate_from_images(self: ForensicFace, list_of_image_paths):\n",
+    "def aggregate_from_images(self: ForensicFace, list_of_image_paths, method='mean', quality_weight=False):\n",
     "    \"\"\"\n",
     "    Given a list of image paths, this method returns the average embedding of all faces found in the images.\n",
     "\n",
     "    Args:\n",
     "        list_of_image_paths (List[str]): List of paths to images.\n",
+    "        method (str, optional): choice of agregating based on the mean or median of the embeddings. Possible values are\n",
+    "            'mean' and 'median'.\n",
+    "        quality_weight (boolean, optional): If True, use the FIQA(L) score as a weight for aggregation.\n",
     "\n",
     "    Returns:\n",
     "        Union[np.ndarray, List]: If one or more faces are found, returns a 1D numpy array of shape (512,) representing the\n",
@@ -661,8 +672,9 @@
     "        d = self.process_image(imgpath)\n",
     "        if len(d) > 0:\n",
     "            embeddings.append(d[\"embedding\"])\n",
+    "            weights.append(d[\"fiqa_score\"] if quality_weight == True else 1.)\n",
     "    if len(embeddings) > 0:\n",
-    "        return self.aggregate_embeddings(np.array(embeddings))\n",
+    "        return self.aggregate_embeddings(np.array(embeddings), method=method, weights=np.array(weights))\n",
     "    else:\n",
     "        return []\n"
    ]
@@ -672,6 +684,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
+      "set det-size: (320, 320)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ff = ForensicFace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
