--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -284,7 +284,8 @@
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
-       ">      ForensicFace.aggregate_embeddings (embeddings, weights=None)\n",
+       ">      ForensicFace.aggregate_embeddings (embeddings, weights=None,\n",
+       ">                                         method='mean')\n",
        "\n",
        "Aggregates multiple embeddings into a single embedding.\n",
        "\n",
@@ -293,6 +294,9 @@
        "        aggregated.\n",
        "    weights (numpy.ndarray, optional): A 1D array of shape (num_embeddings,) containing the weights to be assigned\n",
        "        to each embedding. If not provided, all embeddings are equally weighted.\n",
+       "\n",
+       "    method (str, optional): choice of agregating based on the mean or median of the embeddings. Possible values are\n",
+       "        'mean' and 'median'.\n",
        "\n",
        "Returns:\n",
        "    numpy.ndarray: A 1D array of shape (embedding_dim,) containing the aggregated embedding."
@@ -304,7 +308,8 @@
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
-       ">      ForensicFace.aggregate_embeddings (embeddings, weights=None)\n",
+       ">      ForensicFace.aggregate_embeddings (embeddings, weights=None,\n",
+       ">                                         method='mean')\n",
        "\n",
        "Aggregates multiple embeddings into a single embedding.\n",
        "\n",
@@ -313,6 +318,9 @@
        "        aggregated.\n",
        "    weights (numpy.ndarray, optional): A 1D array of shape (num_embeddings,) containing the weights to be assigned\n",
        "        to each embedding. If not provided, all embeddings are equally weighted.\n",
+       "\n",
+       "    method (str, optional): choice of agregating based on the mean or median of the embeddings. Possible values are\n",
+       "        'mean' and 'median'.\n",
        "\n",
        "Returns:\n",
        "    numpy.ndarray: A 1D array of shape (embedding_dim,) containing the aggregated embedding."
@@ -339,16 +347,20 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L481){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L489){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
-       ">      ForensicFace.aggregate_from_images (list_of_image_paths)\n",
+       ">      ForensicFace.aggregate_from_images (list_of_image_paths, method='mean',\n",
+       ">                                          quality_weight=False)\n",
        "\n",
        "Given a list of image paths, this method returns the average embedding of all faces found in the images.\n",
        "\n",
        "Args:\n",
        "    list_of_image_paths (List[str]): List of paths to images.\n",
+       "    method (str, optional): choice of agregating based on the mean or median of the embeddings. Possible values are\n",
+       "        'mean' and 'median'.\n",
+       "    quality_weight (boolean, optional): If True, use the FIQA(L) score as a weight for aggregation.\n",
        "\n",
        "Returns:\n",
        "    Union[np.ndarray, List]: If one or more faces are found, returns a 1D numpy array of shape (512,) representing the\n",
@@ -357,16 +369,20 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L481){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L489){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
-       ">      ForensicFace.aggregate_from_images (list_of_image_paths)\n",
+       ">      ForensicFace.aggregate_from_images (list_of_image_paths, method='mean',\n",
+       ">                                          quality_weight=False)\n",
        "\n",
        "Given a list of image paths, this method returns the average embedding of all faces found in the images.\n",
        "\n",
        "Args:\n",
        "    list_of_image_paths (List[str]): List of paths to images.\n",
+       "    method (str, optional): choice of agregating based on the mean or median of the embeddings. Possible values are\n",
+       "        'mean' and 'median'.\n",
+       "    quality_weight (boolean, optional): If True, use the FIQA(L) score as a weight for aggregation.\n",
        "\n",
        "Returns:\n",
        "    Union[np.ndarray, List]: If one or more faces are found, returns a 1D numpy array of shape (512,) representing the\n",
@@ -391,6 +407,40 @@
     "language": "python"
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
+      "set det-size: (320, 320)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ff = ForensicFace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -477,7 +527,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L542){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L554){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.extract_faces\n",
        "\n",
@@ -508,7 +558,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L542){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L554){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.extract_faces\n",
        "\n",
