--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -46,8 +46,6 @@
     "\n",
     " O arquivo onnx do modelo de reconhecimento (adaface_ir101web12m.onnx) deve estar na pasta `~/.insightface/model/<model_name>/adaface/`\n",
     "\n",
-    " O arquivo onnx do modelo magface (magface_iresnet100.onnx) deve estar na pasta `~/.insightface/model/<model_name>/magface/`\n",
-    "\n",
     " O arquivo onnx do modelo de qualidade CR_FIQA (cr_fiqa_l.onnx) deve estar na pasta `~/.insightface/model/<model_name>/cr_fiqa/`\n",
     "\n",
     " O modelo padrão é denominado `sepaelv2`. A partir da versão 0.1.5 é possível utilizar outros modelos."
@@ -109,7 +107,7 @@
     }
    ],
    "source": [
-    "ff = ForensicFace(det_size=320, use_gpu=True)"
+    "ff = ForensicFace(det_size=320, use_gpu=True, extended=True)"
    ]
   },
   {
@@ -128,6 +126,15 @@
     "language": "python"
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -162,7 +169,7 @@
     {
      "data": {
       "text/plain": [
-       "0.85562766"
+       "0.8556093"
       ]
      },
      "execution_count": null,
