add progress bar to face extraction from video, build_mosaic accepts list of arrays

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -34,7 +34,8 @@
     "from glob import glob\n",
     "from imutils import build_montages\n",
     "from insightface.app import FaceAnalysis\n",
-    "from insightface.utils import face_align"
+    "from insightface.utils import face_align\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -376,7 +377,7 @@
     "        Based on the imutils build_montages function.\n",
     "\n",
     "        Parameters:\n",
-    "            img_path_list: list of paths to image files\n",
+    "            img_path_list: list of paths to image files or list of bgr_images\n",
     "            mosaic_shape: tuple of integers, (n_cols, n_rows)\n",
     "            border: float, percent of image to use as white border\n",
     "\n",
@@ -390,8 +391,14 @@
     "        right = left\n",
     "\n",
     "        imgs = []\n",
+    "        list_of_arrays = False\n",
     "        for img_path in img_path_list:\n",
-    "            ret = self.process_image_single_face(img_path)\n",
+    "            if type(img_path) == str:  # image path passed as argument\n",
+    "                bgr_img = cv2.imread(imgpath)\n",
+    "            else:  # image array passed as argument\n",
+    "                list_of_arrays = True\n",
+    "                bgr_img = img_path.copy()\n",
+    "            ret = self.process_image_single_face(bgr_img)\n",
     "            if len(ret) > 0:\n",
     "                img = cv2.cvtColor(ret[\"aligned_face\"], cv2.COLOR_RGB2BGR)\n",
     "                img = cv2.copyMakeBorder(\n",
@@ -409,6 +416,10 @@
     "            image_shape=(int(112 * (1 + 2 * border)), int(112 * (1 + 2 * border))),\n",
     "            montage_shape=mosaic_shape,\n",
     "        )[0]\n",
+    "        if list_of_arrays:\n",
+    "            print(\n",
+    "                \"WARNING: list of arrays passed as argument. Make sure image arrays are in BGR format.\"\n",
+    "            )\n",
     "        if save_to is not None:\n",
     "            cv2.imwrite(save_to, mosaic)\n",
     "        return mosaic"
@@ -443,15 +454,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll', 'fiqa_score']),\n",
@@ -472,6 +474,35 @@
    "source": [
     "result = ff.process_image_single_face(\"001_frontal.jpg\")\n",
     "result.keys(), result[\"keypoints\"], result[\"ipd\"], result[\"embedding\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: list of arrays passed as argument. Make sure image arrays are in BGR format.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(118, 236, 3)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imgs = [cv2.imread(x) for x in [\"001_cam1_1.jpg\", \"001_frontal.jpg\"]]\n",
+    "mosaic = ff.build_mosaic(imgs, mosaic_shape=(2, 1))\n",
+    "mosaic.shape"
    ]
   },
   {
@@ -772,39 +803,45 @@
     "    vs = cv2.VideoCapture(video_path)\n",
     "    fps = vs.get(cv2.CAP_PROP_FPS)\n",
     "    start_frame = int(fps * start_from)\n",
+    "    total_frames = int(vs.get(cv2.CAP_PROP_FRAME_COUNT)) // every_n_frames\n",
     "\n",
     "    # seek to starting frame\n",
     "    vs.set(cv2.CAP_PROP_POS_FRAMES, start_frame)\n",
     "    current_frame = start_frame\n",
     "    nfaces = 0\n",
-    "    while True:\n",
-    "        if (current_frame % every_n_frames) != 0:\n",
+    "    with tqdm(\n",
+    "        total=total_frames,\n",
+    "        bar_format=\"Frames processed: {n}/{total} | Time elapsed: {elapsed}\",\n",
+    "    ) as pbar:\n",
+    "        while True:\n",
+    "            if (current_frame % every_n_frames) != 0:\n",
+    "                current_frame = current_frame + 1\n",
+    "                continue\n",
+    "\n",
+    "            vs.set(cv2.CAP_PROP_POS_FRAMES, current_frame)\n",
+    "            ret, frame = vs.read()\n",
+    "\n",
+    "            if not ret:\n",
+    "                break\n",
     "            current_frame = current_frame + 1\n",
-    "            continue\n",
+    "            (h, w) = frame.shape[:2]\n",
     "\n",
-    "        vs.set(cv2.CAP_PROP_POS_FRAMES, current_frame)\n",
-    "        ret, frame = vs.read()\n",
-    "\n",
-    "        if not ret:\n",
-    "            break\n",
-    "        current_frame = current_frame + 1\n",
-    "        (h, w) = frame.shape[:2]\n",
-    "\n",
-    "        faces = self.detectmodel.get(frame)\n",
-    "        for i, face in enumerate(faces):\n",
-    "            startX, startY, endX, endY = face.bbox.astype(\"int\")\n",
-    "            faceW = endX - startX\n",
-    "            faceH = endY - startY\n",
-    "            outBbox = self._get_extended_bbox(\n",
-    "                face.bbox, frame.shape, margin_factor=margin\n",
-    "            )\n",
-    "            # export the face (with added margin)\n",
-    "            face_crop = frame[outBbox[1] : outBbox[3], outBbox[0] : outBbox[2]]\n",
-    "            face_img_path = os.path.join(\n",
-    "                dest_folder, f\"frame_{current_frame:07}_face_{i:02}.png\"\n",
-    "            )\n",
-    "            cv2.imwrite(face_img_path, face_crop)\n",
-    "            nfaces += 1\n",
+    "            faces = self.detectmodel.get(frame)\n",
+    "            for i, face in enumerate(faces):\n",
+    "                startX, startY, endX, endY = face.bbox.astype(\"int\")\n",
+    "                faceW = endX - startX\n",
+    "                faceH = endY - startY\n",
+    "                outBbox = self._get_extended_bbox(\n",
+    "                    face.bbox, frame.shape, margin_factor=margin\n",
+    "                )\n",
+    "                # export the face (with added margin)\n",
+    "                face_crop = frame[outBbox[1] : outBbox[3], outBbox[0] : outBbox[2]]\n",
+    "                face_img_path = os.path.join(\n",
+    "                    dest_folder, f\"frame_{current_frame:07}_face_{i:02}.png\"\n",
+    "                )\n",
+    "                cv2.imwrite(face_img_path, face_crop)\n",
+    "                nfaces += 1\n",
+    "            pbar.update(1)\n",
     "    vs.release()\n",
     "    return nfaces"
    ]
@@ -841,15 +878,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+      "Frames processed: 90/None | Time elapsed: 00:06\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "161"
+       "80"
       ]
      },
      "execution_count": null,
@@ -861,7 +896,7 @@
     "ff.extract_faces(\n",
     "    video_path=\"/home/rafael/video/video.mp4\",\n",
     "    start_from=0,\n",
-    "    every_n_frames=50,\n",
+    "    every_n_frames=100,\n",
     "    dest_folder=\"/home/rafael/video_faces\",\n",
     ")"
    ]
@@ -924,17 +959,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rafael/miniconda3/envs/ffdev/lib/python3.10/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ret = ff.process_image_single_face(\"obama.png\")\n",
     "ret2 = ff.process_aligned_face_image(ret[\"aligned_face\"])"
@@ -968,7 +993,7 @@
     {
      "data": {
       "text/plain": [
-       "(2.198394, 2.198394)"
+       "(2.1983922, 2.1983922)"
       ]
      },
      "execution_count": null,
